--- a/style.css
+++ b/style.css
@@ -1917,18 +1917,20 @@ a {
   .blog-layout-grid .archive-entry .entry-thumbnail {
     margin: 0 auto 17px;
     position: relative; }
-    .blog-layout-grid .archive-entry .entry-thumbnail .entry-cats {
+    .blog-layout-grid .archive-entry .entry-thumbnail .thumbnail-meta {
       left: 12px;
       position: absolute;
       top: 12px;
       max-width: 92%; }
-      .blog-layout-grid .archive-entry .entry-thumbnail .entry-cats a {
+      .blog-layout-grid .archive-entry .entry-thumbnail .thumbnail-meta a,
+      .blog-layout-grid .archive-entry .entry-thumbnail .thumbnail-meta span {
         background: #06090b;
         color: #fff;
         font-family: "Lato", sans-serif;
         font-size: 11px;
         line-height: normal;
         letter-spacing: .1em;
+        margin-right: 5px;
         padding: 7px 9px;
         text-transform: uppercase;
         word-wrap: break-word; }
@@ -1983,11 +1985,12 @@ a {
   margin-bottom: 0;
   position: relative;
   width: 35%; }
-  .blog-layout-alternate .archive-entry .entry-thumbnail .entry-cats {
+  .blog-layout-alternate .archive-entry .entry-thumbnail .thumbnail-meta {
     left: 12px;
     position: absolute;
     top: 12px; }
-    .blog-layout-alternate .archive-entry .entry-thumbnail .entry-cats a {
+    .blog-layout-alternate .archive-entry .entry-thumbnail .thumbnail-meta a,
+    .blog-layout-alternate .archive-entry .entry-thumbnail .thumbnail-meta span {
       background: #06090b;
       color: #fff;
       font-family: "Lato", sans-serif;
