--- a/style.css
+++ b/style.css
@@ -1893,10 +1893,12 @@ a {
   vertical-align: top;
   width: 31%; }
   .blog-layout-grid .archive-entry:nth-child(3n+3) {
-    clear: right;
     margin-right: 0; }
+  .blog-layout-grid .archive-entry:nth-child(3n+4) {
+    clear: left; }
   @media (max-width: 640px) {
     .blog-layout-grid .archive-entry {
+      clear: none;
       display: block;
       margin-right: 0;
       width: 100%; } }
@@ -1927,11 +1929,12 @@ a {
       .blog-layout-grid .archive-entry .entry-thumbnail .thumbnail-meta span {
         background: #06090b;
         color: #fff;
+        display: inline-block;
         font-family: "Lato", sans-serif;
         font-size: 11px;
         line-height: normal;
         letter-spacing: .1em;
-        margin-right: 5px;
+        margin: 0 5px 5px 0;
         padding: 7px 9px;
         text-transform: uppercase;
         word-wrap: break-word; }
