--- a/style.css
+++ b/style.css
@@ -1423,23 +1423,23 @@ a {
   float: left;
   margin: 0 -25.61404% 0 0;
   width: 100%; }
-  .no-active-sidebar .content-area {
-    float: none;
-    margin: 0;
-    width: auto; }
   @media (max-width: 768px) {
     .content-area {
       float: none;
       margin: 0;
       width: auto; } }
+  .no-active-sidebar .content-area {
+    float: none;
+    margin: 0;
+    width: auto; }
 
 .site-main {
   margin: 0 25.61404% 0 0; }
-  .no-active-sidebar .site-main {
-    margin: 0; }
   @media (max-width: 768px) {
     .site-main {
       margin: 0; } }
+  .no-active-sidebar .site-main {
+    margin: 0; }
 
 .site-content .widget-area {
   float: right;
@@ -1460,14 +1460,27 @@ a {
 .main-sidebar-left .content-area {
   float: right;
   margin: 0 0 0 -25.61404%; }
+  @media (max-width: 768px) {
+    .main-sidebar-left .content-area {
+      float: none;
+      margin: 0; } }
 
 .main-sidebar-left .site-main {
   margin: 0 0 0 25.61404%; }
+  @media (max-width: 768px) {
+    .main-sidebar-left .site-main {
+      margin: 0; } }
 
 .main-sidebar-left .site-content .widget-area {
   float: left;
   padding-left: 0;
   padding-right: 40px; }
+  @media (max-width: 768px) {
+    .main-sidebar-left .site-content .widget-area {
+      float: none;
+      margin-top: 5.3333em;
+      padding-left: 0;
+      width: 100%; } }
 
 /*--------------------------------------------------------------
 ## Page Settings
