--- a/style.css
+++ b/style.css
@@ -716,7 +716,7 @@ a {
   .header-design-4 .main-navigation {
     display: inline-block;
     float: right;
-    padding: 30px 0; }
+    padding: calc(30px) 0; }
     .header-design-4 .main-navigation > div li a {
       line-height: 30px; }
 
@@ -1588,8 +1588,8 @@ a {
       text-align: center; }
     .header-design-4 #masthead .site-branding {
       display: inline-block;
-      padding: 30px 0;
-      float: left; }
+      float: left;
+      padding: calc(30px) 0; }
       .header-design-4 #masthead .site-branding .site-title {
         font-size: 40px;
         font-size: 2.5rem;
