--- a/style.css
+++ b/style.css
@@ -1952,10 +1952,10 @@ a {
   text-align: left; }
 
 .blog-layout-alternate .site-main .archive-entry .entry-thumbnail {
-  margin-bottom: 0;
-  width: 35%;
   float: left;
-  position: relative; }
+  margin-bottom: 0;
+  position: relative;
+  width: 35%; }
   .blog-layout-alternate .site-main .archive-entry .entry-thumbnail .entry-cats {
     left: 10px;
     position: absolute;
@@ -1968,9 +1968,9 @@ a {
       text-transform: uppercase; }
 
 .blog-layout-alternate .site-main .archive-entry .entry-content {
-  width: 60%;
+  float: right;
   margin-left: 5%;
-  float: right; }
+  width: 60%; }
   .blog-layout-alternate .site-main .archive-entry .entry-content p {
     margin-bottom: 0; }
 
@@ -1993,13 +1993,53 @@ a {
     margin-bottom: 5em; }
     .blog-layout-alternate .site-main .archive-entry .entry-thumbnail {
       float: none;
-      width: 100%;
-      margin-bottom: 20px; }
+      margin-bottom: 20px;
+      width: 100%; }
     .blog-layout-alternate .site-main .archive-entry .entry-content {
       float: none;
       margin-left: 0;
       margin-right: 0;
       width: 100%; } }
+
+.blog-layout-left-info .site-main .archive-entry .entry-meta {
+  -webkit-box-pack: left;
+  -moz-box-pack: left;
+  box-pack: left;
+  -webkit-justify-content: left;
+  -moz-justify-content: left;
+  -ms-justify-content: left;
+  -o-justify-content: left;
+  justify-content: left;
+  -ms-flex-pack: left; }
+
+.blog-layout-left-info .site-main .archive-entry .entry-title {
+  font-size: 21.28px;
+  font-size: 1.33rem;
+  margin: 0.2em 0 5px;
+  text-align: left; }
+
+.blog-layout-left-info .site-main .archive-entry .entry-thumbnail {
+  margin-bottom: 20px;
+  position: relative; }
+  .blog-layout-left-info .site-main .archive-entry .entry-thumbnail .entry-cats {
+    left: 10px;
+    position: absolute;
+    top: 10px; }
+    .blog-layout-left-info .site-main .archive-entry .entry-thumbnail .entry-cats a {
+      background: #303030;
+      color: #e0e0e0;
+      font-size: 11px;
+      padding: 5px;
+      text-transform: uppercase; }
+
+.blog-layout-left-info .site-main .archive-entry .entry-content p {
+  margin-bottom: 0; }
+
+@media (max-width: 640px) {
+  .blog-layout-left-info .site-main .archive-entry {
+    display: block;
+    margin: 0;
+    width: 100%; } }
 
 /*--------------------------------------------------------------
 ## Archives & Search Results
