Updated settings framework
This fixes interpolated variables and resolves GH-161

--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -129,7 +129,7 @@
 	@at-root .header-design-4 & {
 		display: inline-block;
 		float: right;
-		padding: calc(#{$masthead__padding/2}) 0;
+		padding: calc(#{$masthead__padding} /2) 0;
 
 		> div li a {
 			line-height: 30px;
