--- a/style.css
+++ b/style.css
@@ -716,7 +716,7 @@ a {
   .header-design-4 .main-navigation {
     display: inline-block;
     float: right;
-    padding: calc(30px) 0; }
+    padding: calc(60px /2) 0; }
     .header-design-4 .main-navigation > div li a {
       line-height: 30px; }
 
@@ -1589,7 +1589,7 @@ a {
     .header-design-4 #masthead .site-branding {
       display: inline-block;
       float: left;
-      padding: calc(30px) 0; }
+      padding: calc( 60px /2) 0; }
       .header-design-4 #masthead .site-branding .site-title {
         font-size: 40px;
         font-size: 2.5rem;
@@ -2096,65 +2096,84 @@ a {
   .blog-layout-alternate .archive-entry:nth-of-type(2n) .entry-content {
     float: left; }
 
-.blog-layout-left-info .archive-entry::after {
+.blog-layout-offset .archive-entry::after {
   clear: both;
   content: "";
   display: table; }
 
-.blog-layout-left-info .archive-entry .entry-header {
-  margin-left: 25%; }
-  .blog-layout-left-info .archive-entry .entry-header .entry-meta {
+.blog-layout-offset .archive-entry .entry-header {
+  margin-left: 23%; }
+  @media (max-width: 768px) {
+    .blog-layout-offset .archive-entry .entry-header {
+      margin-left: 0; } }
+  .blog-layout-offset .archive-entry .entry-header .entry-meta {
     display: none; }
-  .blog-layout-left-info .archive-entry .entry-header .entry-time {
-    font-size: 14.4px;
-    font-size: 0.9rem;
+    @media (max-width: 768px) {
+      .blog-layout-offset .archive-entry .entry-header .entry-meta {
+        display: block; } }
+  .blog-layout-offset .archive-entry .entry-header .entry-time {
     color: #adadad;
-    margin-bottom: 0;
+    font-size: 12.8px;
+    font-size: 0.8rem;
+    font-family: "Lato", sans-serif;
+    letter-spacing: .1em;
+    margin-bottom: 16px;
     text-transform: uppercase; }
-  .blog-layout-left-info .archive-entry .entry-header .entry-title {
-    text-align: left;
+    @media (max-width: 768px) {
+      .blog-layout-offset .archive-entry .entry-header .entry-time {
+        display: none; } }
+  .blog-layout-offset .archive-entry .entry-header .entry-title {
     font-size: 34.1328px;
     font-size: 2.1333rem;
-    margin: 5px 0 15px 0; }
+    text-align: left;
+    margin: 0 0 31px; }
+    @media (max-width: 768px) {
+      .blog-layout-offset .archive-entry .entry-header .entry-title {
+        margin: 0.5em 0 35px;
+        text-align: center; } }
+    @media (max-width: 480px) {
+      .blog-layout-offset .archive-entry .entry-header .entry-title {
+        font-size: 25.6px;
+        font-size: 1.6rem; } }
 
-.blog-layout-left-info .archive-entry .entry-left-info {
-  width: 25%;
-  float: left; }
-  .blog-layout-left-info .archive-entry .entry-left-info img {
-    border-radius: 50%; }
-  .blog-layout-left-info .archive-entry .entry-left-info .meta-text {
+.blog-layout-offset .archive-entry .entry-offset {
+  box-sizing: border-box;
+  float: left;
+  padding-right: 30px;
+  width: 23%; }
+  @media (max-width: 768px) {
+    .blog-layout-offset .archive-entry .entry-offset {
+      display: none; } }
+  .blog-layout-offset .archive-entry .entry-offset div {
+    line-height: normal;
+    margin-bottom: 13px; }
+  .blog-layout-offset .archive-entry .entry-offset img {
+    border-radius: 50%;
+    margin-bottom: 3px; }
+  .blog-layout-offset .archive-entry .entry-offset .meta-text {
+    display: block;
     color: #adadad;
-    position: relative;
-    top: 10px; }
-  .blog-layout-left-info .archive-entry .entry-left-info a {
+    font-size: 13.8656px;
+    font-size: 0.8666rem;
+    line-height: normal;
+    margin-bottom: 2px; }
+  .blog-layout-offset .archive-entry .entry-offset a {
     color: #2d2d2d;
-    font-weight: bold;
-    font-family: "Lato", sans-serif; }
+    font-size: 14.9328px;
+    font-size: 0.9333rem;
+    font-weight: bold; }
+    .blog-layout-offset .archive-entry .entry-offset a:hover {
+      color: #626262; }
 
-.blog-layout-left-info .archive-entry .entry-content {
-  width: 75%;
-  float: right; }
-  .blog-layout-left-info .archive-entry .entry-content .gallery-format-slides ul {
+.blog-layout-offset .archive-entry .entry-content {
+  float: right;
+  width: 77%; }
+  @media (max-width: 768px) {
+    .blog-layout-offset .archive-entry .entry-content {
+      float: none;
+      width: 100%; } }
+  .blog-layout-offset .archive-entry .entry-content .gallery-format-slides ul {
     margin: 0; }
-
-.blog-layout-left-info .archive-entry .entry-content p {
-  margin-bottom: 0; }
-
-@media (max-width: 640px) {
-  .blog-layout-left-info .archive-entry .entry-header {
-    margin-left: 0; }
-    .blog-layout-left-info .archive-entry .entry-header .entry-meta {
-      display: block; }
-    .blog-layout-left-info .archive-entry .entry-header .entry-time {
-      display: none; }
-    .blog-layout-left-info .archive-entry .entry-header .entry-title {
-      text-align: center; }
-  .blog-layout-left-info .archive-entry .entry-left-info,
-  .blog-layout-left-info .archive-entry .entry-content {
-    width: 100%;
-    float: none; }
-  .blog-layout-left-info .archive-entry .entry-left-info {
-    display: none; } }
 
 /*--------------------------------------------------------------
 ## Archives & Search Results
